1.0.0
-----
 * Expose TTL option for the create snapshot endpoint (CASSANDRASC-85)
 * Allow DriverUtils to be pluggable (CASSANDRASC-88)
 * Add JMX health checks during the periodic health checks (CASSANDRASC-87)
 * Sidecar should be able to load metadata even if the local instance is unavailable (CASSANDRASC-79)
 * Expose additional SSL configuration options for the Sidecar Service (CASSANDRASC-82)
 * Expose additional node settings (CASSANDRASC-84)
 * Sidecar does not handle keyspaces and table names with mixed case (CASSANDRASC-76)
 * Require gossip to be enabled for ring and token ranges mapping endpoints (CASSANDRASC-83)
 * Improve TokenRangeReplicasResponse payload (CASSANDRASC-81)
 * HealthCheckPeriodicTask execute never completes the promise when instances are empty (CASSANDRASC-80)
 * Fix token-ranges endpoint to handle gossip-info responses without 'status' (CASSANDRASC-78)
 * Upgrade vertx to version 4.4.6 to bring hot reloading and traffic shaping options (CASSANDRASC-77)
 * Fix unable to stream secondary index files (CASSANDRASC-74)
 * Updates token-ranges endpoint to return additional instance metadata (CASSANDRASC-73)
 * Shade Jackson completely to prevent incompatibility issues (CASSANDRASC-75)
 * Adds endpoint to serve read/write replica-sets by token-ranges (CASSANDRASC-60)
 * Split unit tests and integration tests in CircleCI config (CASSANDRASC-72)
 * Allow configuring permissions for uploaded SSTables (CASSANDRASC-71)
 * Refactor Sidecar configuration (CASSANDRASC-69)
 * Add Client Methods for Obtaining Sidecar and Cassandra Health (CASSANDRASC-70)
 * Publish bytes streamed and written metrics (CASSANDRASC-68)
 * Extract the in-jvm dtest template for use in other projects (CASSANDRASC-55)
 * Fix relocation of native libraries for vertx-client-shaded (CASSANDRASC-67)
 * Enrich RetriesExhaustedException to have more information for better visibility (CASSANDRASC-65)
 * Fix failing unit tests in Apache CI (CASSANDRASC-66)